Make PfbReader and Library static
spotless

spotless